# SDL

./: CMakeLists.txt
android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
include/: SDL.h  SDL_config_macosx.h  SDL_events.h
src/: SDL_assert.c  SDL_hints.c
src/audio/: SDL_audio.c
src/core/android/: SDL_android.c  SDL_android.h
src/core/winrt/: SDL_winrtapp_direct3d.cpp
src/dynapi/: SDL_dynapi.h  SDL_dynapi_overrides.h  SDL_dynapi_procs.h
src/events/: SDL_events.c  SDL_events_c.h  SDL_mouse.c
src/file/: SDL_rwops.c
src/render/metal/: SDL_render_metal.m
src/stdlib/: SDL_string.c
src/test/: SDL_test_common.c
src/video/: SDL_pixels.c  SDL_surface.c  SDL_sysvideo.h  SDL_video.c
src/video/android/: SDL_androidvideo.c
src/video/cocoa/: SDL_cocoaevents.m  SDL_cocoaopengl.m  SDL_cocoavideo.h  SDL_cocoavideo.m  SDL_cocoawindow.h  SDL_cocoawindow.m
src/video/uikit/: SDL_uikitvideo.m
src/video/wayland/: SDL_waylanddatamanager.h  SDL_waylandevents.c  SDL_waylandvideo.c
src/video/windows/: SDL_windowsevents.c  SDL_windowsvideo.c
src/video/x11/: SDL_x11events.c  SDL_x11video.c
